--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dsp-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
